--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular-masonry": "^0.16.0"
+    "angular": "^1.6.2",
+    "angular-animate": "^1.6.2",
+    "angular-aria": "^1.6.2",
+    "angular-masonry": "^0.16.0",
+    "angular-material": "^1.1.3",
+    "massive": "^2.6.0"
+  },
+  "devDependencies": {
+    "angular": "^1.6.2",
+    "angular-mocks": "^1.6.2",
+    "angular-ui-router": "^0.4.2",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0"
   }
 }
